--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,11 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+.idea/.idea.patterns/.idea/encodings.xml
+.idea/.idea.patterns/.idea/indexLayout.xml
+.idea/.idea.patterns/.idea/modules.xml
+.idea/.idea.patterns/.idea/projectSettingsUpdater.xml
+.idea/.idea.patterns/.idea/workspace.xml
+.idea/.idea.patterns/riderModule.iml
+.idea/.idea.patterns/.idea/contentModel.xml
+.idea/.idea.patterns/.idea/vcs.xml
